@@ -18,11 +18,11 @@
 package org.apache.ignite.internal.processors.query.calcite.exec.rel;
 
 import java.util.Iterator;
+import java.util.Map;
 import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import com.google.common.collect.ImmutableMap;
 import org.apache.calcite.rel.type.RelDataType;
 import org.apache.calcite.rel.type.RelDataTypeField;
 import org.apache.ignite.internal.processors.query.calcite.exec.ArrayRowHandler;
@@ -31,7 +31,6 @@ import org.apache.ignite.internal.processors.query.calcite.exec.QueryTaskExecuto
 import org.apache.ignite.internal.processors.query.calcite.exec.RowHandler;
 import org.apache.ignite.internal.processors.query.calcite.metadata.FragmentDescription;
 import org.apache.ignite.internal.processors.query.calcite.prepare.PlanningContext;
-import org.apache.ignite.internal.processors.query.calcite.util.StripedThreadPoolExecutor;
 import org.apache.ignite.internal.testframework.IgniteAbstractTest;
 import org.apache.ignite.internal.testframework.IgniteTestUtils;
 import org.jetbrains.annotations.NotNull;
@@ -50,23 +49,15 @@ public class AbstractExecutionTest extends IgniteAbstractTest {
 
     /** */
     @BeforeEach
-    public void setup() throws Exception {
-        taskExecutor = new QueryTaskExecutorImpl();
-
-        taskExecutor.stripedThreadPoolExecutor(new StripedThreadPoolExecutor(
-            4,
-            "calcite-exec-test-ignite",
-            "calciteQry",
-            this::handle,
-            true,
-            60_000L
-        ));
+    public void beforeTest() {
+        taskExecutor = new QueryTaskExecutorImpl("no_node");
+        taskExecutor.start();
     }
 
     /** */
     @AfterEach
-    public void tearDown() {
-        taskExecutor.tearDown();
+    public void afterTest() {
+        taskExecutor.stop();
 
         if (lastE != null)
             throw new AssertionError(lastE);
@@ -78,12 +69,12 @@ public class AbstractExecutionTest extends IgniteAbstractTest {
         return new ExecutionContext<>(
             taskExecutor,
             PlanningContext.builder()
-                .localNodeId(UUID.randomUUID())
+                .localNodeId(UUID.randomUUID().toString())
                 .build(),
             UUID.randomUUID(),
             fragmentDesc,
             ArrayRowHandler.INSTANCE,
-            ImmutableMap.of()
+            Map.of()
         );
     }
 
