@@ -17,82 +17,83 @@
 
 package org.apache.ignite.internal.table;
 
-import java.lang.reflect.Method;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Phaser;
 import java.util.concurrent.atomic.AtomicBoolean;
-import org.apache.ignite.configuration.RootKey;
-import org.apache.ignite.configuration.annotation.ConfigurationType;
 import org.apache.ignite.configuration.schemas.runner.ClusterConfiguration;
 import org.apache.ignite.configuration.schemas.runner.NodeConfiguration;
+import org.apache.ignite.configuration.schemas.store.DataStorageConfiguration;
 import org.apache.ignite.configuration.schemas.table.TablesConfiguration;
-import org.apache.ignite.internal.affinity.AffinityManager;
-import org.apache.ignite.internal.affinity.event.AffinityEvent;
-import org.apache.ignite.internal.affinity.event.AffinityEventParameters;
+import org.apache.ignite.internal.affinity.AffinityUtils;
+import org.apache.ignite.internal.baseline.BaselineManager;
 import org.apache.ignite.internal.configuration.ConfigurationManager;
-import org.apache.ignite.internal.configuration.util.ConfigurationUtil;
-import org.apache.ignite.internal.manager.EventListener;
+import org.apache.ignite.internal.configuration.schema.ExtendedTableConfigurationSchema;
+import org.apache.ignite.internal.configuration.storage.TestConfigurationStorage;
+import org.apache.ignite.internal.configuration.tree.NamedListNode;
 import org.apache.ignite.internal.metastorage.MetaStorageManager;
-import org.apache.ignite.internal.metastorage.client.Condition;
 import org.apache.ignite.internal.metastorage.client.Entry;
-import org.apache.ignite.internal.metastorage.client.Operation;
 import org.apache.ignite.internal.raft.Loza;
-import org.apache.ignite.internal.schema.SchemaManager;
-import org.apache.ignite.internal.schema.SchemaRegistry;
+import org.apache.ignite.internal.schema.SchemaDescriptor;
+import org.apache.ignite.internal.schema.SchemaUtils;
 import org.apache.ignite.internal.schema.configuration.SchemaConfigurationConverter;
-import org.apache.ignite.internal.schema.event.SchemaEvent;
-import org.apache.ignite.internal.schema.event.SchemaEventParameters;
 import org.apache.ignite.internal.table.distributed.TableManager;
+import org.apache.ignite.internal.testframework.WorkDirectory;
+import org.apache.ignite.internal.testframework.WorkDirectoryExtension;
+import org.apache.ignite.internal.util.ByteUtils;
 import org.apache.ignite.internal.util.Cursor;
-import org.apache.ignite.internal.vault.VaultManager;
 import org.apache.ignite.lang.ByteArray;
 import org.apache.ignite.lang.IgniteLogger;
+import org.apache.ignite.lang.NodeStoppingException;
 import org.apache.ignite.network.ClusterNode;
 import org.apache.ignite.network.NetworkAddress;
-import org.apache.ignite.schema.ColumnType;
+import org.apache.ignite.network.TopologyService;
 import org.apache.ignite.schema.SchemaBuilders;
-import org.apache.ignite.schema.SchemaTable;
+import org.apache.ignite.schema.definition.ColumnType;
+import org.apache.ignite.schema.definition.TableDefinition;
 import org.apache.ignite.table.Table;
 import org.jetbrains.annotations.NotNull;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.platform.commons.util.ReflectionUtils;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
+import static org.apache.ignite.configuration.annotation.ConfigurationType.DISTRIBUTED;
+import static org.apache.ignite.configuration.annotation.ConfigurationType.LOCAL;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertSame;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.ArgumentMatchers.same;
-import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.when;
 
 /**
  * Tests scenarios for table manager.
  */
-@ExtendWith(MockitoExtension.class)
+@ExtendWith({MockitoExtension.class, WorkDirectoryExtension.class})
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class TableManagerTest {
     /** The logger. */
     private static final IgniteLogger LOG = IgniteLogger.forClass(TableManagerTest.class);
-
-    /** Internal prefix for the metasorage. */
-    private static final String INTERNAL_PREFIX = "internal.tables.";
 
     /** Public prefix for metastorage. */
     private static final String PUBLIC_PREFIX = "dst-cfg.table.tables.";
@@ -112,8 +113,11 @@ public class TableManagerTest {
     /** Node name. */
     private static final String NODE_NAME = "node1";
 
-    /** Configuration manager. */
-    private ConfigurationManager cfrMgr;
+    /** Node configuration manager. */
+    private ConfigurationManager nodeCfgMgr;
+
+    /** Cluster configuration manager. */
+    private ConfigurationManager clusterCfgMgr;
 
     /** MetaStorage manager. */
     @Mock(lenient = true)
@@ -121,19 +125,18 @@ public class TableManagerTest {
 
     /** Schema manager. */
     @Mock(lenient = true)
-    private SchemaManager sm;
+    private BaselineManager bm;
 
-    /** Affinity manager. */
+    /** Topology service. */
     @Mock(lenient = true)
-    private AffinityManager am;
+    private TopologyService ts;
 
     /** Raft manager. */
     @Mock(lenient = true)
     private Loza rm;
 
-    /** Vault manager. */
-    @Mock(lenient = true)
-    private VaultManager vm;
+    @WorkDirectory
+    private Path workDir;
 
     /** Test node. */
     private final ClusterNode node = new ClusterNode(
@@ -144,58 +147,29 @@ public class TableManagerTest {
 
     /** Before all test scenarios. */
     @BeforeEach
-    private void before() {
+    void setUp() {
         try {
-            cfrMgr = new ConfigurationManager(rootConfigurationKeys(), Arrays.asList(
-                new TestConfigurationStorage(ConfigurationType.LOCAL),
-                new TestConfigurationStorage(ConfigurationType.DISTRIBUTED)));
+            nodeCfgMgr = new ConfigurationManager(
+                List.of(NodeConfiguration.KEY),
+                Map.of(),
+                new TestConfigurationStorage(LOCAL),
+                List.of()
+            );
 
-            cfrMgr.bootstrap("{\n" +
-                "   \"node\":{\n" +
-                "      \"metastorageNodes\":[\n" +
-                "         \"" + NODE_NAME + "\"\n" +
-                "      ]\n" +
-                "   }\n" +
-                "}", ConfigurationType.LOCAL);
+            clusterCfgMgr = new ConfigurationManager(
+                List.of(ClusterConfiguration.KEY, TablesConfiguration.KEY, DataStorageConfiguration.KEY),
+                Map.of(),
+                new TestConfigurationStorage(DISTRIBUTED),
+                Collections.singletonList(ExtendedTableConfigurationSchema.class)
+            );
 
-            cfrMgr.bootstrap("{\n" +
-                "   \"cluster\":{\n" +
-                "   \"metastorageNodes\":[\n" +
-                "      \"" + NODE_NAME + "\"\n" +
-                "   ]\n" +
-                "},\n" +
-                "   \"table\":{\n" +
-                "      \"tables\":{\n" +
-                "         \"" + STATIC_TABLE_NAME + "\":{\n" +
-                "            \"name\":\"TestTable\",\n" +
-                "            \"partitions\":16,\n" +
-                "            \"replicas\":1,\n" +
-                "            \"columns\":{\n" +
-                "               \"id\":{\n" +
-                "                  \"name\":\"id\",\n" +
-                "                  \"type\":{\n" +
-                "                     \"type\":\"Int64\"\n" +
-                "                  },\n" +
-                "                  \"nullable\":false\n" +
-                "               }\n" +
-                "            },\n" +
-                "            \"indices\":{\n" +
-                "               \"pk\":{\n" +
-                "                  \"name\":\"pk\",\n" +
-                "                  \"type\":\"primary\",\n" +
-                "                  \"uniq\":true,\n" +
-                "                  \"columns\":{\n" +
-                "                     \"id\":{\n" +
-                "                        \"name\":\"id\",\n" +
-                "                        \"asc\":true\n" +
-                "                     }\n" +
-                "                  }\n" +
-                "               }\n" +
-                "            }\n" +
-                "         }\n" +
-                "      }\n" +
-                "   }\n" +
-                "}", ConfigurationType.DISTRIBUTED);
+            nodeCfgMgr.start();
+
+            nodeCfgMgr.bootstrap("node.metastorageNodes = [" + NODE_NAME + "]");
+
+            clusterCfgMgr.start();
+
+            clusterCfgMgr.configurationRegistry().initializeDefaults();
         }
         catch (Exception e) {
             LOG.error("Failed to bootstrap the test configuration manager.", e);
@@ -204,13 +178,28 @@ public class TableManagerTest {
         }
     }
 
+    /** Stop configuration manager. */
+    @AfterEach
+    void tearDown() {
+        nodeCfgMgr.stop();
+        clusterCfgMgr.stop();
+    }
+
     /**
      * Tests a table which was defined before start through bootstrap configuration.
      */
-    @Disabled("https://issues.apache.org/jira/browse/IGNITE-14578")
+    @Disabled("https://issues.apache.org/jira/browse/IGNITE-15255")
     @Test
     public void testStaticTableConfigured() {
-        TableManager tableManager = new TableManager(cfrMgr, mm, sm, am, rm, vm);
+        TableManager tableManager = new TableManager(
+            clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY),
+            clusterCfgMgr.configurationRegistry().getConfiguration(DataStorageConfiguration.KEY),
+            rm,
+            bm,
+            ts,
+            mm,
+            workDir
+        );
 
         assertEquals(1, tableManager.tables().size());
 
@@ -224,7 +213,7 @@ public class TableManagerTest {
     public void testCreateTable() {
         CompletableFuture<TableManager> tblManagerFut = new CompletableFuture<>();
 
-        SchemaTable scmTbl = SchemaBuilders.tableBuilder("PUBLIC", DYNAMIC_TABLE_NAME).columns(
+        TableDefinition scmTbl = SchemaBuilders.tableBuilder("PUBLIC", DYNAMIC_TABLE_NAME).columns(
             SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
             SchemaBuilders.column("val", ColumnType.INT64).asNullable().build()
         ).withPrimaryKey("key").build();
@@ -237,55 +226,26 @@ public class TableManagerTest {
     }
 
     /**
-     * Tests drop a table  through public API.
+     * Tests drop a table through public API.
      */
     @Test
     public void testDropTable() {
         CompletableFuture<TableManager> tblManagerFut = new CompletableFuture<>();
 
-        SchemaTable scmTbl = SchemaBuilders.tableBuilder("PUBLIC", DYNAMIC_TABLE_FOR_DROP_NAME).columns(
+        TableDefinition scmTbl = SchemaBuilders.tableBuilder("PUBLIC", DYNAMIC_TABLE_FOR_DROP_NAME).columns(
             SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
             SchemaBuilders.column("val", ColumnType.INT64).asNullable().build()
         ).withPrimaryKey("key").build();
 
-        TableImpl table = mockManagersAndCreateTable(scmTbl, tblManagerFut);
+        mockManagersAndCreateTable(scmTbl, tblManagerFut);
 
         TableManager tableManager = tblManagerFut.join();
-
-        when(sm.unregisterSchemas(any())).thenReturn(CompletableFuture.completedFuture(true));
-
-        doAnswer(invocation -> {
-            EventListener<SchemaEventParameters> schemaInitialized = invocation.getArgument(1);
-
-            SchemaRegistry schemaRegistry = mock(SchemaRegistry.class);
-
-            CompletableFuture.supplyAsync(() -> schemaInitialized.notify(
-                new SchemaEventParameters(table.tableId(), schemaRegistry),
-                null));
-
-            return null;
-        }).when(sm).listen(same(SchemaEvent.DROPPED), any());
-
-        when(am.removeAssignment(any())).thenReturn(CompletableFuture.completedFuture(true));
-
-        doAnswer(invocation -> {
-            EventListener<AffinityEventParameters> affinityRemovedDelegate = invocation.getArgument(1);
-
-            ArrayList<List<ClusterNode>> assignment = new ArrayList<>(PARTITIONS);
-
-            for (int part = 0; part < PARTITIONS; part++)
-                assignment.add(new ArrayList<ClusterNode>(Collections.singleton(node)));
-
-            CompletableFuture.supplyAsync(() -> affinityRemovedDelegate.notify(
-                new AffinityEventParameters(table.tableId(), assignment),
-                null));
-
-            return null;
-        }).when(am).listen(same(AffinityEvent.REMOVED), any());
 
         tableManager.dropTable(scmTbl.canonicalName());
 
         assertNull(tableManager.table(scmTbl.canonicalName()));
+
+        assertEquals(0, tableManager.tables().size());
     }
 
     /**
@@ -295,7 +255,7 @@ public class TableManagerTest {
     public void testGetTableDuringCreation() throws Exception {
         CompletableFuture<TableManager> tblManagerFut = new CompletableFuture<>();
 
-        SchemaTable scmTbl = SchemaBuilders.tableBuilder("PUBLIC", DYNAMIC_TABLE_FOR_DROP_NAME).columns(
+        TableDefinition scmTbl = SchemaBuilders.tableBuilder("PUBLIC", DYNAMIC_TABLE_FOR_DROP_NAME).columns(
             SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
             SchemaBuilders.column("val", ColumnType.INT64).asNullable().build()
         ).withPrimaryKey("key").build();
@@ -330,162 +290,167 @@ public class TableManagerTest {
     }
 
     /**
+     * Tries to create a table that already exists.
+     */
+    @Test
+    public void testDoubledCreateTable() {
+        CompletableFuture<TableManager> tblManagerFut = new CompletableFuture<>();
+
+        TableDefinition scmTbl = SchemaBuilders.tableBuilder("PUBLIC", DYNAMIC_TABLE_NAME)
+            .columns(
+                SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
+                SchemaBuilders.column("val", ColumnType.INT64).asNullable().build())
+            .withPrimaryKey("key")
+            .build();
+
+        Table table = mockManagersAndCreateTable(scmTbl, tblManagerFut);
+
+        assertNotNull(table);
+
+        assertThrows(RuntimeException.class, () -> tblManagerFut.join().createTable(scmTbl.canonicalName(), tblCh -> SchemaConfigurationConverter.convert(scmTbl, tblCh)
+            .changeReplicas(1)
+            .changePartitions(10)));
+
+        assertSame(table, tblManagerFut.join().createTableIfNotExists(scmTbl.canonicalName(), tblCh -> SchemaConfigurationConverter.convert(scmTbl, tblCh)
+            .changeReplicas(1)
+            .changePartitions(10)));
+    }
+
+    /**
      * Instantiates Table manager and creates a table in it.
      *
-     * @param schemaTable Configuration schema for a table.
+     * @param tableDefinition Configuration schema for a table.
      * @param tblManagerFut Future for table manager.
      * @return Table.
      */
     private TableImpl mockManagersAndCreateTable(
-        SchemaTable schemaTable,
+        TableDefinition tableDefinition,
         CompletableFuture<TableManager> tblManagerFut
     ) {
-        return mockManagersAndCreateTableWithDelay(schemaTable, tblManagerFut, null);
+        return mockManagersAndCreateTableWithDelay(tableDefinition, tblManagerFut, null);
     }
 
     /**
      * Instantiates a table and prepares Table manager. When the latch would open, the method completes.
      *
-     * @param schemaTable Configuration schema for a table.
+     * @param tableDefinition Configuration schema for a table.
      * @param tblManagerFut Future for table manager.
      * @param phaser Phaser for the wait.
      * @return Table manager.
      */
     @NotNull private TableImpl mockManagersAndCreateTableWithDelay(
-        SchemaTable schemaTable,
+        TableDefinition tableDefinition,
         CompletableFuture<TableManager> tblManagerFut,
         Phaser phaser
     ) {
-        when(mm.hasMetastorageLocally(any())).thenReturn(true);
+        when(rm.prepareRaftGroup(any(), any(), any())).thenReturn(CompletableFuture.completedFuture(null));
 
-        CompletableFuture<UUID> tblIdFut = new CompletableFuture<>();
+        AtomicBoolean tableCreatedFlag = new AtomicBoolean();
 
-        when(mm.invoke(any(Condition.class), any(Operation.class), any(Operation.class))).thenAnswer(invocation -> {
-            Condition condition = invocation.getArgument(0);
+        try (MockedStatic<SchemaUtils> schemaServiceMock = mockStatic(SchemaUtils.class)) {
+            schemaServiceMock.when(() -> SchemaUtils.prepareSchemaDescriptor(anyInt(), any())).
+                thenReturn(mock(SchemaDescriptor.class));
+        }
 
-            Object internalCondition = ReflectionUtils.tryToReadFieldValue(Condition.class, "cond", condition).get();
-
-            Method getKeyMethod = ReflectionUtils.findMethod(internalCondition.getClass(), "key").get();
-
-            byte[] metastorageKeyBytes = (byte[])ReflectionUtils.invokeMethod(getKeyMethod, internalCondition);
-
-            tblIdFut.complete(UUID.fromString(new String(metastorageKeyBytes, StandardCharsets.UTF_8)
-                .substring(INTERNAL_PREFIX.length())));
-
-            return CompletableFuture.completedFuture(true);
-        });
-
-        when(sm.initSchemaForTable(any(), eq(schemaTable.canonicalName()))).thenReturn(CompletableFuture.completedFuture(true));
-
-        doAnswer(invocation -> {
-            EventListener<SchemaEventParameters> schemaInitialized = invocation.getArgument(1);
-
-            assertTrue(tblIdFut.isDone());
-
-            SchemaRegistry schemaRegistry = mock(SchemaRegistry.class);
-
-            CompletableFuture.supplyAsync(() -> schemaInitialized.notify(
-                new SchemaEventParameters(tblIdFut.join(), schemaRegistry),
-                null));
-
-            return null;
-        }).when(sm).listen(same(SchemaEvent.INITIALIZED), any());
-
-        when(am.calculateAssignments(any(), eq(schemaTable.canonicalName()))).thenReturn(CompletableFuture.completedFuture(true));
-
-        doAnswer(invocation -> {
-            EventListener<AffinityEventParameters> affinityClaculatedDelegate = invocation.getArgument(1);
-
+        try (MockedStatic<AffinityUtils> affinityServiceMock = mockStatic(AffinityUtils.class)) {
             ArrayList<List<ClusterNode>> assignment = new ArrayList<>(PARTITIONS);
 
             for (int part = 0; part < PARTITIONS; part++)
-                assignment.add(new ArrayList<ClusterNode>(Collections.singleton(node)));
+                assignment.add(new ArrayList<>(Collections.singleton(node)));
 
-            assertTrue(tblIdFut.isDone());
+            affinityServiceMock.when(() -> AffinityUtils.calculateAssignments(any(), anyInt(), anyInt())).
+                thenReturn(assignment);
+        }
 
-            CompletableFuture.supplyAsync(() -> affinityClaculatedDelegate.notify(
-                new AffinityEventParameters(tblIdFut.join(), assignment),
-                null));
+        TableManager tableManager = new TableManager(
+            clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY),
+            clusterCfgMgr.configurationRegistry().getConfiguration(DataStorageConfiguration.KEY),
+            rm,
+            bm,
+            ts,
+            mm,
+            workDir
+        );
 
-            return null;
-        }).when(am).listen(same(AffinityEvent.CALCULATED), any());
+        TableImpl tbl2 = null;
 
-        TableManager tableManager = new TableManager(cfrMgr, mm, sm, am, rm, vm);
+        try {
+            tableManager.start();
 
-        tblManagerFut.complete(tableManager);
-
-        when(mm.get(eq(new ByteArray(PUBLIC_PREFIX + ConfigurationUtil.escape(schemaTable.canonicalName()) + ".name"))))
-            .thenReturn(CompletableFuture.completedFuture(null));
-
-        when(mm.range(eq(new ByteArray(PUBLIC_PREFIX)), any())).thenAnswer(invocation -> {
-            Cursor<Entry> cursor = mock(Cursor.class);
-
-            when(cursor.hasNext()).thenReturn(false);
-
-            return cursor;
-        });
-
-        int tablesBeforeCreation = tableManager.tables().size();
-
-        cfrMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY).tables().listen(ctx -> {
-            boolean createTbl = ctx.newValue().get(schemaTable.canonicalName()) != null &&
-                ctx.oldValue().get(schemaTable.canonicalName()) == null;
-
-            boolean dropTbl = ctx.oldValue().get(schemaTable.canonicalName()) != null &&
-                ctx.newValue().get(schemaTable.canonicalName()) == null;
-
-            if (!createTbl && !dropTbl)
-                return CompletableFuture.completedFuture(null);
-
-            when(mm.get(eq(new ByteArray(PUBLIC_PREFIX + ConfigurationUtil.escape(schemaTable.canonicalName()) + ".name"))))
-                .thenAnswer(invocation -> CompletableFuture.completedFuture(createTbl ? mock(Entry.class) : null));
+            tblManagerFut.complete(tableManager);
 
             when(mm.range(eq(new ByteArray(PUBLIC_PREFIX)), any())).thenAnswer(invocation -> {
-                AtomicBoolean firstRecord = new AtomicBoolean(createTbl);
-
                 Cursor<Entry> cursor = mock(Cursor.class);
 
-                when(cursor.hasNext()).thenAnswer(hasNextInvocation ->
-                    firstRecord.compareAndSet(true, false));
-
-                Entry mockEntry = mock(Entry.class);
-
-                when(mockEntry.key()).thenReturn(new ByteArray(PUBLIC_PREFIX +
-                    ConfigurationUtil.escape(schemaTable.canonicalName()) + ".name"));
-
-                when(cursor.next()).thenReturn(mockEntry);
+                when(cursor.hasNext()).thenReturn(false);
 
                 return cursor;
             });
 
-            if (phaser != null)
-                phaser.arriveAndAwaitAdvance();
+            int tablesBeforeCreation = tableManager.tables().size();
 
-            return CompletableFuture.completedFuture(null);
-        });
+            clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY).tables().listen(ctx -> {
+                boolean createTbl = ctx.newValue().get(tableDefinition.canonicalName()) != null &&
+                    ctx.oldValue().get(tableDefinition.canonicalName()) == null;
 
-        TableImpl tbl2 = (TableImpl)tableManager.createTable(schemaTable.canonicalName(), tblCh -> SchemaConfigurationConverter.convert(schemaTable, tblCh)
-            .changeReplicas(1)
-            .changePartitions(10)
-        );
+                boolean dropTbl = ctx.oldValue().get(tableDefinition.canonicalName()) != null &&
+                    ctx.newValue().get(tableDefinition.canonicalName()) == null;
 
-        assertNotNull(tbl2);
+                if (!createTbl && !dropTbl)
+                    return CompletableFuture.completedFuture(null);
 
-        assertEquals(tablesBeforeCreation + 1, tableManager.tables().size());
+                tableCreatedFlag.set(createTbl);
+
+                try {
+                    when(mm.range(eq(new ByteArray(PUBLIC_PREFIX)), any())).thenAnswer(invocation -> {
+                        AtomicBoolean firstRecord = new AtomicBoolean(createTbl);
+
+                        Cursor<Entry> cursor = mock(Cursor.class);
+
+                        when(cursor.hasNext()).thenAnswer(hasNextInvocation ->
+                            firstRecord.compareAndSet(true, false));
+
+                        Entry mockEntry = mock(Entry.class);
+
+                        when(mockEntry.key()).thenReturn(new ByteArray(PUBLIC_PREFIX + "uuid." + NamedListNode.NAME));
+
+                        when(mockEntry.value()).thenReturn(ByteUtils.toBytes(tableDefinition.canonicalName()));
+
+                        when(cursor.next()).thenReturn(mockEntry);
+
+                        return cursor;
+                    });
+                }
+                catch (NodeStoppingException e) {
+                    LOG.error("Node was stopped during table creation.", e);
+
+                    fail();
+                }
+
+                if (phaser != null)
+                    phaser.arriveAndAwaitAdvance();
+
+                return CompletableFuture.completedFuture(null);
+            });
+
+            tbl2 = (TableImpl)tableManager.createTable(tableDefinition.canonicalName(), tblCh -> SchemaConfigurationConverter.convert(tableDefinition, tblCh)
+                .changeReplicas(1)
+                .changePartitions(10)
+            );
+
+            assertNotNull(tbl2);
+
+            assertEquals(tablesBeforeCreation + 1, tableManager.tables().size());
+        }
+        catch (NodeStoppingException e) {
+            LOG.error("Node was stopped during table creation.", e);
+
+            fail();
+        }
+        finally {
+            tableManager.stop();
+        }
 
         return tbl2;
-    }
-
-    /**
-     * Gets a list of configuration keys to use in the test scenario.
-     *
-     * @return List of root configuration keys.
-     */
-    private static List<RootKey<?, ?>> rootConfigurationKeys() {
-        return Arrays.asList(
-            NodeConfiguration.KEY,
-            ClusterConfiguration.KEY,
-            TablesConfiguration.KEY
-        );
     }
 }
